--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./css/main.css">
-        <script type="module" defer src="script.js"></script>
+        <script type="module" src="script.js"></script>
     </head>
     <body>
 
